# rgbdemo

./: .gitmodules  CMakeLists.txt  Copyright.txt  NEWS  README  THANKS  check_mac_bundle.sh  fix_macosx_bundle.sh  linux_configure.sh  linux_configure_external_opencv.sh  macosx_build.sh  macosx_configure.sh  release-rgbdemo-macosx-x64.sh
calibration/: CMakeLists.txt  annotate_image.cpp  calibrate_freenect.cpp  calibrate_kinect.cpp  calibrate_kinect_ir.cpp  calibrate_multiple_kinects.cpp  calibrate_openni_depth.cpp  calibrate_openni_intrinsics.cpp  calibrate_pmdnano.cpp  calibrate_projector.cpp  calibration_common.cpp  calibration_common.h
data/: kinect_calibration.yml  pattern_a3.calib  pattern_a4.calib
detect-objects/: CMakeLists.txt  FiltersWindow.cpp  FiltersWindow.h  GuiController.cpp  GuiController.h  ObjectWindow.cpp  ObjectWindow.h  ObjectWindow.ui  RawImagesWindow.cpp  RawImagesWindow.h  RawImagesWindow.ui  View3dWindow.cpp  View3dWindow.h  View3dWindow.ui  main.cpp
multikinect/: CMakeLists.txt  FiltersWindow.cpp  FiltersWindow.h  FiltersWindow.ui  GuiController.cpp  GuiController.h  GuiMultiKinectController.cpp  GuiMultiKinectController.h  MultiKinectScanner.cpp  MultiKinectScanner.h  RawImagesWindow.cpp  RawImagesWindow.h  RawImagesWindow.ui  ScannerBlock.cpp  ScannerBlock.h  View3dWindow.cpp  View3dWindow.h  View3dWindow.ui  main.cpp
nestk/: AUTHORS  CMakeLists.txt  NEWS  UseNestk.cmake.in
nestk/doc/: Doxyfile
nestk/ntk/: CMakeLists.txt  core.h  ntk.h
nestk/ntk/camera/: calibration.cpp  calibration.h  file_grabber.cpp  file_grabber.h  kinect_grabber.cpp  kinect_grabber.h  opencv_grabber.cpp  opencv_grabber.h  rgbd_frame_recorder.cpp  rgbd_frame_recorder.h  rgbd_grabber.cpp  rgbd_grabber.h  rgbd_image.cpp  rgbd_image.h  rgbd_processor.cpp  rgbd_processor.h
nestk/ntk/geometry/: affine_transform.cpp  affine_transform.h  eigen_utils.h  plane.cpp  plane.h  polygon.cpp  polygon.h  pose_3d.cpp  pose_3d.h  relative_pose_estimator.cpp  relative_pose_estimator.h  similarity_transform.cpp  similarity_transform.h
nestk/ntk/gpu/: opencl.cpp  opencl.h
nestk/ntk/gui/: image_widget.cpp  image_widget.h  screen_grabber.cpp  screen_grabber.h
nestk/ntk/image/: color_model.cpp  color_model.h  feature.cpp  feature.h  sift.cpp  sift.h  sift_gpu.cpp  sift_gpu.h
nestk/ntk/image/siftgpu/: GLTexImage.cpp  GLTexImage.h  GlobalUtil.cpp  GlobalUtil.h  LiteWindow.h  ProgramGLSL.cpp  ProgramGLSL.h  ProgramGPU.cpp  ProgramGPU.h  PyramidGL.cpp  PyramidGL.h  ShaderMan.cpp  ShaderMan.h  SiftGPU.cpp  SiftGPU.h  SiftPyramid.cpp  SiftPyramid.h
nestk/ntk/mesh/: mesh.cpp  mesh.h  mesh_generator.cpp  mesh_generator.h  mesh_renderer.cpp  mesh_renderer.h  mesh_viewer.cpp  mesh_viewer.h  ply.cpp  ply.h  rgbd_modeler.cpp  rgbd_modeler.h  surfels_rgbd_modeler.cpp  surfels_rgbd_modeler.h  utils.h
nestk/ntk/numeric/: cost_function.cpp  cost_function.h  differential_evolution_minimizer.cpp  differential_evolution_minimizer.h  differential_evolution_solver.cpp  differential_evolution_solver.h  levenberg_marquart_minimizer.cpp  levenberg_marquart_minimizer.h  utils.cpp  utils.h
nestk/ntk/stats/: distributions.cpp  distributions.h  estimation.cpp  estimation.h  histogram.cpp  histogram.h  hypothesis_testing.cpp  hypothesis_testing.h  hypothesis_testing.hxx  moments.cpp  moments.h  moments.hxx
nestk/ntk/thread/: event.cpp  event.h  utils.cpp  utils.h
nestk/ntk/utils/: arg.cpp  arg.h  common.h  debug.cpp  debug.h  opencv_utils.cpp  opencv_utils.h  qt_utils.cpp  qt_utils.h  serializable.h  stl.h  time.h  xml_parser.cpp  xml_parser.h  xml_serializable.cpp  xml_serializable.h
nestk/templates/: header.old.tpl  header.tpl
nestk/tests/: CMakeLists.txt  test-algorithm.cpp  test-async-grabber.cpp  test-distributions.cpp  test-estimation.cpp  test-features.cpp  test-gpu.cpp  test-hscolor.cpp  test-hypothesis-testing.cpp  test-kinect-3d.cpp  test-kinect-grabber.cpp  test-math.cpp  test-mesh.cpp  test-minimizers.cpp  test-opencv-grabber.cpp  test-pose3d.cpp  test-serialization.cpp  test-siftgpu-server.cpp  test-siftgpu.cpp  test-stl.cpp  test-threads.cpp  test-transactions.cpp  test-transform.cpp  test_common.h
object/: CMakeLists.txt  FiltersWindow.cpp  GuiController.cpp  GuiController.h  ModelAcquisitionController.cpp  ModelAcquisitionController.h  ModelAcquisitionWindow.cpp  ModelAcquisitionWindow.h  ModelAcquisitionWindow.ui  RawImagesWindow.cpp  main.cpp
people-tracker/: CMakeLists.txt  FiltersWindow.cpp  FiltersWindow.h  FiltersWindow.ui  GuiController.cpp  GuiController.h  PeopleTracker.cpp  PeopleTracker.h  PeopleTrackerWindow.cpp  PeopleTrackerWindow.h  PeopleTrackerWindow.ui  RawImagesWindow.cpp  RawImagesWindow.h  RawImagesWindow.ui  people_tracker.cpp
reconstructor/: CMakeLists.txt  FiltersWindow.h  GuiController.cpp  GuiController.h  ModelAcquisitionController.cpp  ModelAcquisitionController.h  ModelAcquisitionWindow.cpp  ModelAcquisitionWindow.h  ModelAcquisitionWindow.ui  RawImagesWindow.cpp  RawImagesWindow.h  reconstructor.cpp
scan-markers/: CMakeLists.txt  FiltersWindow.cpp  (+11 more)
scan-topview/: CMakeLists.txt  FiltersWindow.cpp  FiltersWindow.h  FiltersWindow.ui  GuiController.cpp  GuiController.h  ModelAcquisitionController.cpp  ModelAcquisitionController.h  ModelAcquisitionWindow.cpp  ModelAcquisitionWindow.h  ModelAcquisitionWindow.ui  RawImagesWindow.cpp  RawImagesWindow.h  RawImagesWindow.ui  View3dWindow.cpp  View3dWindow.h  main.cpp
skeletor/: CMakeLists.txt  GuiController.cpp  GuiController.h  RawImagesWindow.cpp  RawImagesWindow.h  RawImagesWindow.ui  skeletor.cpp
viewer/: CMakeLists.txt  CalibrationWindow.cpp  CalibrationWindow.h  CalibrationWindow.ui  DetectorWindow.cpp  DetectorWindow.h  DetectorWindow.ui  FiltersWindow.cpp  FiltersWindow.h  FiltersWindow.ui  GuiController.cpp  GuiController.h  ModelAcquisitionController.cpp  ModelAcquisitionController.h  ModelAcquisitionWindow.h  ModelAcquisitionWindow.ui  ObjectDetector.cpp  ObjectDetector.h  RawImagesWindow.cpp  RawImagesWindow.h  RawImagesWindow.ui  View3dWindow.cpp  View3dWindow.h  View3dWindow.ui  viewer.cpp
